%%{init: {'theme':'neutral', 'themeVariables': {'fontSize':'15px'}, 'flowchart': {'curve':'basis'}}}%%
classDiagram
    direction LR

    class VendingMachine {
        <<Context>>
        -Map~String,Product~ catalog
        -Inventory~String~ productStock
        -int balance
        -VendingState state
        +insertMoney(int) boolean
        +selectProduct(String) TransactionResult
        +cancel() int
        +commitDispense(code, price) int
        +refund() int
    }

    class VendingState {
        <<interface>>
        +insertMoney(VendingMachine, int) boolean
        +selectProduct(VendingMachine, String) TransactionResult
        +cancel(VendingMachine) int
    }
    class IdleState
    class HasMoneyState

    class Inventory~K~ {
        -Map~K,Integer~ counts
        +addOne(K)
        +removeOne(K) boolean
        +count(K) int
    }
    class Product {
        <<record>>
        +String code
        +String name
        +int price
    }
    class TransactionResult {
        +Status status
        +Product product
        +int change
    }

    VendingState <|.. IdleState
    VendingState <|.. HasMoneyState

    VendingMachine o-- VendingState : current (delegates)
    VendingMachine *-- Inventory : stock
    VendingMachine ..> Product : catalog
    VendingMachine ..> TransactionResult : returns

    IdleState ..> VendingMachine : setState(hasMoney)
    HasMoneyState ..> VendingMachine : commitDispense / setState
